[package]
name = "rpg-game"
version = "0.1.0"
authors = ["Luminight <balazscsabai98@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
2d = [
    "bevy/bevy_sprite",
    "bevy_asset_loader/2d",
]

[dependencies]
bevy = "0.7.0"
json = "0.12.4"
anyhow = { version = "1" }
bevy_asset_loader = { version = "0.10.0", features = ["2d"] }
